# smritikosh

./: .dockerignore  .env.example  .gitignore  Dockerfile  FLOW.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  server.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_recall_count.py  0003_add_cluster_fields.py  0004_add_memory_feedback.py  0005_add_user_beliefs.py  0006_add_user_procedures.py  0007_add_reconsolidation_fields.py  0008_add_app_users.py  0009_multi_app_ids.py  0010_add_belief_evidence_ids.py  0011_hnsw_index.py  0012_resize_embedding_dims.py  0013_dynamic_embedding_dims.py  0014_add_source_type_and_fact_status.py  0015_add_processed_sessions.py  0016_add_fact_contradictions.py  0017_add_media_ingests.py  0018_add_user_voice_profiles.py  0019_add_user_connectors.py  0020_add_api_key_scopes.py  0021_add_media_raw_file.py  0022_add_llm_usage.py  0023_add_user_quotas.py  0024_add_user_activity.py  0025_add_memory_consents.py  0026_add_consolidation_anchor.py  0027_add_belief_status.py  0028_add_embedding_migrations.py  0029_add_cognition_tables.py  0030_add_nudges_table.py
evals/: README.md  __init__.py  __main__.py  baseline-gemma4-e4b.json  matcher.py  runner.py
evals/benchmarks/: RESULTS.md  __init__.py  __main__.py  adapter.py  common.py  datasets.py  runner.py  smoke-locomo.json
evals/golden/: event_cases.json  session_cases.json
grafana/: README.md
grafana/alerting/: smritikosh_alerts.yaml
grafana/dashboards/: smritikosh_api_observability.json
local_docs/: GAP_ANALYSIS.md
sample/: .env.example  README.md  chatbot.py  client.py  litellm_middleware_notebook.ipynb  media_ingest_demo.py  middleware_demo.py  passive_extraction_demo.py  seed.py  seed_priya.py
scripts/: reset_data.py  run_publishable_benchmarks.sh
sdk-node/: package.json  tsconfig.json  tsconfig.types.json
sdk-node/src/: client.test.ts  client.ts  index.ts  types.ts
smritikosh/: config.py  metrics.py
smritikosh/api/: deps.py  main.py  quotas.py  ratelimit.py  schemas.py
smritikosh/audit/: __init__.py  logger.py  mongodb.py
smritikosh/auth/: __init__.py  deps.py  utils.py
smritikosh/cognition/: __init__.py  council.py  decision.py  lifeos.py  meeting_prep.py  prediction.py  reflection.py
smritikosh/connectors/: __init__.py  base.py  calendar.py  email.py  file.py  gcal.py  gmail.py  oauth.py  slack.py  webhook.py
smritikosh/db/: activity.py  models.py  neo4j.py  postgres.py
smritikosh/llm/: adapter.py  usage.py
smritikosh/mcp/: __init__.py  server.py
smritikosh/memory/: consent.py  episodic.py  hippocampus.py  identity.py  narrative.py  procedural.py  semantic.py
tests/: conftest.py  test_amygdala.py  test_api.py  test_api_admin.py  test_api_procedures.py  test_audit.py  test_auth.py  test_belief_miner.py  test_benchmarks_harness.py  test_cognition.py  test_config_security.py  test_connectors.py  test_consent.py  test_consolidator.py  test_context_builder.py  test_cors.py  test_council.py  test_cross_system_synthesizer.py  test_db_models.py  test_e2e_pipeline.py  test_episodic_memory.py  test_evals_harness.py  test_fact_decayer.py  test_hippocampus.py  test_identity.py  test_intent_classifier.py  test_key_rotation.py  test_leader.py  test_lifeos.py  test_llm_adapter.py  test_mcp_server.py  test_media_ingest.py  test_media_processor.py  test_meeting_prep.py  test_memory_clusterer.py  test_metrics.py  test_narrative_memory.py  test_pool_governance.py  test_procedural_memory.py  test_quotas.py  (+13 more)
ui/: .env.local  .env.local.example  auth.ts  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+107 files in other folders)
